[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tavily-python>=0.7.23",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "trafilatura>=1.6.0",
    "sentence-transformers>=5.3.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-groq>=1.1.2",
    "langchain-docling>=2.0.0",
    "docling-core[chunking]>=2.70.0",
    "docling>=2.80.0",
    "transformers>=4.57.6",
]

[project.scripts]
qa = "crawler.qa:main"
dataset = "crawler.dataset:main"

[tool.setuptools.packages.find]
where = ["src"]
